# adomi-platform-controller

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Dockerfile.api  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json  post-install.sh
.github/workflows/: ci.yml
charts/adomi-platform-api/: Chart.yaml  values.yaml
charts/adomi-platform-api/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  rbac.yaml  service.yaml  serviceaccount.yaml
charts/adomi-platform-controller/: Chart.yaml  values.yaml
charts/adomi-platform-controller/templates/: NOTES.txt  _helpers.tpl  build-rbac.yaml  crds.yaml  deployment.yaml  preview-rbac.yaml  rbac.yaml  serviceaccount.yaml  workflowtemplate-db-restore.yaml  workflowtemplate-db-snapshot.yaml  workflowtemplate-odoo-build.yaml
charts/adomi-platform-management/: Chart.yaml
deploy/crds/: identity.adomi.io_ssoapplications.yaml  platform.adomi.io_applications.yaml  platform.adomi.io_applicationtypes.yaml  platform.adomi.io_clients.yaml  platform.adomi.io_databases.yaml  platform.adomi.io_databaseservers.yaml  platform.adomi.io_domains.yaml  platform.adomi.io_environments.yaml  platform.adomi.io_gitrepositories.yaml  platform.adomi.io_organizations.yaml  platform.adomi.io_snapshots.yaml  platform.adomi.io_workspaces.yaml
examples/: application-mailpit.yaml  application-odoo.yaml  application-superset.yaml  argo-workflows.yaml  client.yaml  database.yaml  databaseserver-cnpg.yaml  databaseserver-external.yaml  gitrepository-previews.yaml  organization.yaml  snapshot.yaml  ssoapplication-proxy.yaml  ssoapplication.yaml  workspace.yaml
src/adomi-platform-management-odoo/: .gitignore  Dockerfile  README.md  docker-compose.yml
src/adomi-platform-management-odoo/config/: odoo.conf
src/adomi_platform_api/: __init__.py  __main__.py  app.py  auth.py  cluster.py  config.py  deps.py  identity.py  models.py  openapi.py  registry.py  secrets.py  service.py  specs.py
src/adomi_platform_api/git/: __init__.py  base.py  forgejo.py
src/adomi_platform_api/routers/: __init__.py  _common.py  applications.py  clients.py  databases.py  databaseservers.py  domains.py  environments.py  gitrepositories.py  identity.py  images.py  repo.py  (+3 more)
src/adomi_platform_controller/: __init__.py  __main__.py  argocd.py  argoevents.py  authentik.py  backend.py  buildsecrets.py  chartvalues.py  cnpg.py  conditions.py  config.py  dbjobs.py  dbprovision.py  externalsecrets.py  github.py  harbor.py  ingress.py  kube.py  namespaces.py  odoonotify.py  oidc.py  openbao.py  operator.py  requeue.py  resolve.py  secretgen.py  ssoapps.py  state.py  workflows.py
src/adomi_platform_management/: .env.example  README.md
src/adomi_platform_schema/: __init__.py
tests/: conftest.py  test_api_app.py  test_api_forgejo.py  test_api_identity.py  test_api_images.py  test_api_schema.py  test_api_scoped.py  test_api_specs.py  test_apptypes.py  test_argocd.py  test_argoevents.py  test_buildsecrets.py  test_chartvalues.py  test_client_namespace_fallback.py  test_cnpg.py  test_conditions.py  test_config.py  test_dbprovision.py  test_github.py  test_harbor.py  test_ingress.py  test_integrations.py  test_oidc.py  test_oidc_seed_wiring.py  test_requeue.py  test_resolve.py  test_schema_plurals.py  test_scoped_config.py  test_secretgen.py  test_snapshots.py  test_workflows.py
tests/e2e/: test_github_app_e2e.py  test_portal_write_e2e.py
(+146 files in other folders)
